[gd_scene load_steps=15 format=2]

[ext_resource path="res://GUI/DeathScreenGUI/DeathScreenGUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Sprites/Collectibles/Coin/Coin1.png" type="Texture" id=3]
[ext_resource path="res://GUI/HpText/HpText.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sprites/GUI/Icons/ExpIcon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Collectibles/Coin/AnimatedTexture_Coin.tres" type="Texture" id=6]
[ext_resource path="res://Assets/Theme/Theme_SuccessButton.tres" type="Theme" id=7]
[ext_resource path="res://Lib/FJ_LibHelper/ButtonEffect/ButtonEffectCreator.gd" type="Script" id=8]
[ext_resource path="res://Assets/Theme/Theme_BlueButton.tres" type="Theme" id=9]
[ext_resource path="res://Assets/Theme/Theme_OrangeButton.tres" type="Theme" id=10]








[sub_resource type="Animation" id=1]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "HideAll"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer2/ReviveButtonAds:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer2/ReviveButton:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer2/ReviveButton2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VBoxContainer:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("VBoxContainer:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("VRemainingContainer:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("VRemainingContainer:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("VBoxContainer2:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "ShowButtons"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer2/ReviveButton:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer2/ReviveButton2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer2/ReviveButtonAds:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("VRemainingContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VRemainingContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="DeathScreenGUI" type="Control"]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_right = 96.0
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.74902 )

[node name="DiedLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -112.0
margin_right = 80.0
margin_bottom = -87.0
custom_fonts/font = ExtResource( 2 )
text = "GAME OVER!"
align = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 32.0
margin_right = 192.0
margin_bottom = 88.0
alignment = 1

[node name="DiedLabel2" type="Label" parent="VBoxContainer"]
margin_top = 3.0
margin_right = 192.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Lost:"
align = 1

[node name="HB_CoinLostContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 192.0
margin_bottom = 33.0
custom_constants/separation = 0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HB_CoinLostContainer"]
margin_left = 84.0
margin_right = 92.0
margin_bottom = 11.0
texture = ExtResource( 3 )

[node name="EmptySpaceRect" type="ReferenceRect" parent="VBoxContainer/HB_CoinLostContainer"]
margin_left = 92.0
margin_right = 100.0
margin_bottom = 11.0
rect_min_size = Vector2( 8, 8 )

[node name="GoldMinusText" type="Label" parent="VBoxContainer/HB_CoinLostContainer"]
visible = false
margin_left = 96.0
margin_right = 104.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.984314, 0.219608, 0, 1 )
text = "-"
align = 1

[node name="GoldLostText" parent="VBoxContainer/HB_CoinLostContainer" instance=ExtResource( 4 )]
editor/display_folded = true
margin_left = 100.0
margin_right = 108.0
margin_bottom = 11.0
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="HB_ExpLostContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 192.0
margin_bottom = 52.0
custom_constants/separation = 0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HB_ExpLostContainer"]
margin_left = 83.0
margin_right = 92.0
margin_bottom = 11.0
texture = ExtResource( 5 )

[node name="EmptySpaceRect" type="ReferenceRect" parent="VBoxContainer/HB_ExpLostContainer"]
margin_left = 92.0
margin_right = 100.0
margin_bottom = 11.0
rect_min_size = Vector2( 8, 8 )

[node name="ExpMinusText" type="Label" parent="VBoxContainer/HB_ExpLostContainer"]
visible = false
margin_left = 96.0
margin_right = 104.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.984314, 0.219608, 0, 1 )
text = "-"
align = 1

[node name="ExpLostText" parent="VBoxContainer/HB_ExpLostContainer" instance=ExtResource( 4 )]
margin_left = 100.0
margin_right = 108.0
margin_bottom = 11.0
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="VRemainingContainer" type="VBoxContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.0
margin_bottom = 17.0
alignment = 1

[node name="RemainingLabel" type="Label" parent="VRemainingContainer"]
margin_right = 192.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
text = "Remaining"
align = 1
uppercase = true

[node name="GoldRemainingContainer" type="HBoxContainer" parent="VRemainingContainer"]
margin_top = 19.0
margin_right = 192.0
margin_bottom = 30.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VRemainingContainer/GoldRemainingContainer"]
margin_left = 84.0
margin_right = 92.0
margin_bottom = 11.0
texture = ExtResource( 6 )

[node name="GoldLabel" parent="VRemainingContainer/GoldRemainingContainer" instance=ExtResource( 4 )]
margin_left = 100.0
margin_right = 108.0
margin_bottom = 11.0

[node name="ExpRemainingContainer" type="HBoxContainer" parent="VRemainingContainer"]
margin_top = 38.0
margin_right = 192.0
margin_bottom = 49.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VRemainingContainer/ExpRemainingContainer"]
margin_left = 59.0
margin_right = 68.0
margin_bottom = 11.0
texture = ExtResource( 5 )

[node name="ExpLabel" parent="VRemainingContainer/ExpRemainingContainer" instance=ExtResource( 4 )]
margin_left = 76.0
margin_right = 84.0
margin_bottom = 11.0

[node name="SeperatorLabel" type="Label" parent="VRemainingContainer/ExpRemainingContainer"]
margin_left = 92.0
margin_right = 100.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
text = "/"
align = 1

[node name="ExpNextLabel" type="Label" parent="VRemainingContainer/ExpRemainingContainer"]
margin_left = 108.0
margin_right = 132.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
text = "100"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -104.0
margin_right = 88.0
margin_bottom = -7.0
alignment = 2

[node name="ReviveButtonAds" type="Button" parent="VBoxContainer2"]
margin_right = 176.0
margin_bottom = 27.0
theme = ExtResource( 7 )
disabled = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Recover (Watch ads)"
clip_text = true

[node name="ButtonEffectCreator" type="Node" parent="VBoxContainer2/ReviveButtonAds"]
script = ExtResource( 8 )
effect_color = Color( 0.34902, 0.858824, 0.333333, 1 )

[node name="ReviveButton" type="Button" parent="VBoxContainer2"]
margin_top = 35.0
margin_right = 176.0
margin_bottom = 62.0
theme = ExtResource( 9 )
disabled = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Respawn"
clip_text = true

[node name="ButtonEffectCreator" type="Node" parent="VBoxContainer2/ReviveButton"]
script = ExtResource( 8 )
effect_color = Color( 0.235294, 0.745098, 1, 1 )

[node name="ReviveButton2" type="Button" parent="VBoxContainer2"]
margin_top = 70.0
margin_right = 176.0
margin_bottom = 97.0
theme = ExtResource( 10 )
disabled = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "To Village"
clip_text = true

[node name="ButtonEffectCreator" type="Node" parent="VBoxContainer2/ReviveButton2"]
script = ExtResource( 8 )
effect_color = Color( 0.984314, 0.729412, 0, 1 )

[node name="ConfirmTimer" type="Timer" parent="VBoxContainer2/ReviveButton2"]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 1 )
anims/HideAll = SubResource( 2 )
anims/ShowButtons = SubResource( 3 )
anims/ShowCoinExpLost = SubResource( 4 )

[connection signal="tween_completed" from="VBoxContainer/HB_CoinLostContainer/GoldLostText/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="VBoxContainer2/ReviveButtonAds" to="." method="_on_ReviveButtonAds_pressed"]
[connection signal="pressed" from="VBoxContainer2/ReviveButton" to="." method="_on_ReviveButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/ReviveButton2" to="." method="_on_ReviveButton2_pressed"]
[connection signal="timeout" from="VBoxContainer2/ReviveButton2/ConfirmTimer" to="." method="_on_ConfirmTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="VBoxContainer/HB_CoinLostContainer/GoldLostText"]
